# spam-email-detector

./: .gitignore  README.md  pyproject.toml
spam_email_detector/: spam_email_detector.ipynb
