[tool.poetry]
name = "spam-email-detector"
version = "0.1.0"
description = ""
authors = ["Kevin <mungaikamau7@gmail.com>", "Alex <>", "Zafir <>", "Josheph <>", "Anthony <>"]
readme = "README.md"
packages = [{include = "spam_email_detector"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
notebook = "^6.4.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
nltk = "^3.7"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-unused-arguments = "^0.0.11"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^1.5.3"
flake8-rst-docstrings = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
